Measure tool: Crash in edit mode when snapping is enabled #108958

Closed
opened 2023-06-14 05:08:02 +02:00 by Takayoshi-Ohkubo · 2 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce MX250/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.98

Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3
Worked: (newest version of Blender that worked as expected)

Caused by cad897de16

Short description of error
Crash in edit mode when snapping toggle is enabled in edit mode

Exact steps for others to reproduce the error

  • Open attached file
  • Select 87 series sleeper diesel car body + X side then enter edit mode
  • Ensure snapping is enabled
  • Select measure tool. Draw a line
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce MX250/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.98 **Blender Version** Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: `e1ccd9d4a1d3` Worked: (newest version of Blender that worked as expected) Caused by cad897de16 **Short description of error** Crash in edit mode when snapping toggle is enabled in edit mode **Exact steps for others to reproduce the error** - Open attached file - Select `87 series sleeper diesel car body + X side` then enter edit mode - Ensure snapping is enabled - Select measure tool. Draw a line
Takayoshi-Ohkubo added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-14 05:08:03 +02:00
Pratik Borhade changed title from 特定状況下でメジャー機能とスナップ機能を同時使用すると強制終了する(?) to Crashes when using the measure function and the snap function at the same time under certain circumstances (?) 2023-06-14 05:44:48 +02:00
YimingWu changed title from Crashes when using the measure function and the snap function at the same time under certain circumstances (?) to tinyCAD cause crash with snap+measure feature 2023-06-14 05:46:25 +02:00
Member

Thanks for the report. I can confirm the crash. Will check.

Thanks for the report. I can confirm the crash. Will check.
Pratik Borhade changed title from tinyCAD cause crash with snap+measure feature to Measure tool: Crash in edit mode when snapping is enabled 2023-06-14 05:56:25 +02:00
Pratik Borhade added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-06-14 06:02:07 +02:00
Member

Caused by cad897de16
@mano-wii ^

Caused by cad897de1660b1c81971c58cbcea41100d5f930c @mano-wii ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-14 15:23:28 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108958
No description provided.